@@ -1,3 +1,6 @@
+2005-11-08
+	- Fix for set_expiry in Cache::Memory (credit to Sean M. Egan)
+
 2005-10-20
 	- Bugfix release (2.03)
 	- Fix for cache_umask: individual files were not created with correct
